# ghdepup

./: .gitignore  Cargo.toml  NOTICE  README.md  ghdeps.toml  ghversions.toml
.github/actions/rustbuild-build-action/: action.yml
.github/actions/selfupdate/: Cargo.toml  action.yml  selfupdate.sh
.github/actions/selfupdate/src/: main.rs
.github/selfupdate/: Cargo.toml  selfupdate.sh
.github/selfupdate/src/: main.rs
.github/workflows/: build-main.yml  github-actions-demo.yml  github-actions-selfupdate.yml  merge-checks.yml  selfupdate.yml
src/: main.rs
