[dependencies.futures]
features = ["std"]
version = ""

[dependencies.hyper]
features = ["full"]
version = "0.14.29"

[dependencies.hyper-tls]
version = "0.6.0"

[dependencies.itertools]
version = "0.13.0"

[dependencies.semver]
version = ""

[dependencies.serde]
version = "1.0.203"

[dependencies.serde_json]
features = ["std"]
version = "1.0"

[dependencies.tokio]
features = [
    "full",
    "rt",
    "macros",
]
version = ""

[dependencies.toml]
features = [
    "parse",
    "display",
]
version = "0.22.14"

[features]
default = ["write_outfile"]
print_debug = []
write_outfile = []

[package]
edition = "2021"
name = "ghdepup"
version = "0.1.0"
