[dependencies.futures]
features = ["std"]
version = "0.3.30"

[dependencies.hyper]
features = ["full"]
version = "0.14.29"

[dependencies.hyper-tls]
version = "0.5.0"

[dependencies.itertools]
version = "0.13.0"

[dependencies.semver]
version = "1.0.23"

[dependencies.serde]
version = "1.0.203"

[dependencies.serde_json]
features = ["std"]
version = "1.0"

[dependencies.tokio]
features = [
    "full",
    "rt",
    "macros",
]
version = "1.38.0"

[dependencies.toml]
features = [
    "parse",
    "display",
]
version = "0.8.14"

[features]
default = ["write_outfile"]
print_debug = []
write_outfile = []

[package]
edition = "2021"
name = "ghdepup"
version = "0.2.0"
